@@ -1,4 +1,3 @@
-
 [B][COLOR green]V 1.0.0 (Tuesday 06 October, 2015)[/COLOR][/B]
 
 -- [COLOR yellow][B]Release[/COLOR][/B]
@@ -29,3 +28,6 @@
 
 [B][COLOR green]V 1.0.8 (Saturday 27 May, 2016)[/COLOR][/B]
 -- [COLOR yellow][B]fixes[/COLOR][/B] Added 720p links for live sports streaming(if available - need to use let me choose option), and fixed subtitles integration with 3rd party services.
+
+[B][COLOR green]V 1.0.9 (Saturday 21 June, 2016)[/COLOR][/B]
+-- [COLOR yellow][B]fixes[/COLOR][/B] fix for tvshows.
